[project]
name = "kraty-server-sdk"
version = "0.13.0"
description = "Python server SDK for the Kraty game-events platform, covering per-game server-side actions: manual grants, IAP fulfilment, inventory grant/revoke, wallet credit/debit, push-lobbies, webhook verification. Targets the /server/v1 surface."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "Kraty" }]
keywords = ["kraty", "events", "leaderboard", "grants", "live-ops"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "httpx>=0.27,<1.0",
]

[project.urls]
Homepage = "https://kraty.app"
Documentation = "https://kraty.app/docs/server-sdks/python"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kraty_server_sdk"]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "ruff>=0.6",
  "mypy>=1.10",
]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "PL"]
ignore = [
  "PLR0913",  # too many args: public API methods deliberately use lots of kwargs
]

[tool.ruff.lint.per-file-ignores]
# Test assertions naturally compare against literal values; muting the
# magic-value rule there keeps the noise floor low without hiding it
# in production code.
"tests/*" = ["PLR2004", "PLR0915"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
